environments/ds-labs/ds-lab-1/services/future-signals/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: future-signals
  namespace: future-signals
spec:
  selector:
    app: future-signals
  type: NodePort
  ports:
    - name: http
      port: 8501
      targetPort: http
