environments/ds-labs/ds-lab-1/services/future-signals/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: alb-ingress
  namespace: future-signals
  annotations:
    kubernetes.io/ingress.class: alb
    external-dns.alpha.kubernetes.io/hostname: future-signals.ds-lab-1.datascience.adarga.dev
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/group.name: ds-lab-1-apps
    alb.ingress.kubernetes.io/auth-type: oidc
    alb.ingress.kubernetes.io/auth-idp-oidc: '{"issuer":"https://adarga-internal.eu.auth0.com/","authorizationEndpoint":"https://adarga-internal.eu.auth0.com/authorize","tokenEndpoint":"https://adarga-internal.eu.auth0.com/oauth/token","userInfoEndpoint":"https://adarga-internal.eu.auth0.com/userinfo","secretName":"future-signals-auth0"}'
    alb.ingress.kubernetes.io/auth-scope: 'email openid'
    alb.ingress.kubernetes.io/auth-on-unauthenticated-request: authenticate
spec:
  rules:
    - host: future-signals.ds-lab-1.datascience.adarga.dev
      http:
        paths:
          - path: /*
            backend:
              serviceName: future-signals
              servicePort: http
